Resolved tours metrics alignment
Resolved tours metrics alignment to make it responsive. Made changes in left navbar to make its width responsive to screen size.

--- a/src/app/(app)/tours/(withLayout)/tours.scss
+++ b/src/app/(app)/tours/(withLayout)/tours.scss
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    
     .tours-hdr-tiles{
         display: flex;
-        justify-content: space-between;
+        gap: 24px;
     }
 }
